--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    
+
     <div class="container container-lg px-5">
-      <div class="row time-block past">
+      <div class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3"></div>
         <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
         <button class="btn saveBtn col-2 col-md-1" aria-label="save">
